--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.19.1",
+    "bootstrap": "^5.1.3",
     "ejs": "^3.1.6",
     "express": "^4.17.2"
   }
